Include only *.conf

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -14,5 +14,5 @@ http {
         server_name localhost;
     }
 
-    include ${buildout:directory}/etc/conf.d/*;
+    include ${buildout:directory}/etc/conf.d/*.conf;
 }
